<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RecommendationOverall"
    tools:showIn="@layout/activity_recommendation_overall"
    android:background="#79f4cc2d"
    android:weightSum="1">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="372dp"
        android:id="@+id/recommendmoviesoverall"
        android:drawSelectorOnTop="false"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterMajor"
        android:spinnerMode="dialog"
        android:layout_below="@+id/recommendmoviesoverall"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Recommended Movies"
        android:id="@+id/textView10"
        android:padding="30dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
