...

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameTxt"
        android:hint="Username"
        android:editable="false"
        android:clickable="false"
        android:drawableTint="#000000" />

    <Space
...

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:hint="Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/LoginB"
        android:layout_gravity="center_horizontal"
        android:onClick="onBLoginClick"
        android:background="#c1000000"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold" />
...
