...
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Movie Selector"
        android:id="@+id/textView3"
        android:textStyle="bold|italic"
        android:textSize="35dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
